--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,21 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header></header>
-    <main></main>
+    <header><img src="img/imagem_LOGO.png" classe="img-logotipo" alt="Logo Clube HQ's"> </header>
+    <main>
+    <h1>VENHA PARA O CLUBE DOS HQ'S</h1>
+    <h2>Faça já sua assinatura e garanta seu HQ mensalmente!</h2> 
+
+      <form>
+      <label for="cardNumber">Número do Cartão de Crédito:</label>
+      <input type="text" id="cardNumber" placeholder="Digite o número do seu cartão de crédito">
+              
+      <button type="button" onclick="validateCard()">Validar</button>
+
+    </form>
+      <div class="result" id="result"></div>
+    </main>
     <footer></footer>
-    <script src="index.js" type="module"></script>
+    <script src="/index.js" type="module"></script>
   </body>
 </html>
